# raspberry-mcp

./: Dockerfile  README.md  WALKTHROUGH.md  debug_ir_listener.py  deploy.sh  main.py  pyproject.toml  run_agent.sh  start_agent.sh
agents/: client.py
claude_desktop/: claude_destop_config.json
mcp_server/: __init__.py  server.py
mcp_server/constants/: __init__.py  gpio_pins.py
mcp_server/interfaces/: __init__.py  resource.py  tool.py
mcp_server/services/: ir_listener_manager.py  resource_service.py  tool_service.py
mcp_server/tools/: __init__.py  add_numbers.py
mcp_server/tools/discover/: __init__.py
mcp_server/tools/discover_devices/: __init__.py  discover_devices.py  discovery_model.py
mcp_server/tools/discovery/: discover_devices.py  discovery_model
mcp_server/tools/fan_control/: __init__.py  fan_model.py  fan_off.py  fan_on.py  fan_speed.py
mcp_server/tools/humidity_sensor/: __init__.py  humidity_models.py  read_humidity.py
mcp_server/tools/infrared_retrieval/: __init__.py
mcp_server/tools/ir_control/: __init__.py  get_mapping_guidance.py  ir_models.py  list_device_operations.py  send_ir_command.py  test_ir_transmitter.py  troubleshoot_ir.py
mcp_server/tools/notifications/: __init__.py  notification_models.py  (+1 more)
mcp_server/utils/: device_registry.py  ir_event_controls.py  simulated_environment.py  smart_plug.py
test_scripts/: README.md  full_decoder.txt  loopback_test.py  test_cli.py  test_climate_simulation.py  test_emitter.py  test_ir.py  test_ir_transmitter.py  troubleshoot_ir.py  tx_rx_loopback_test.py  validate_transmission_fix.py
(+43 files in other folders)
