[project]
name = "raspberry-mcp"
version = "0.1.0"
description = "Raspberry PI MCP with Agentic Client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11.3",
    "pigpio>=1.78",
    "pigpio-dht>=0.3.5; sys_platform == 'linux'",
    "rpi-gpio>=0.7.1; sys_platform == 'linux'",
    "pydantic>=2.0.0",
    "atomic-agents>=2.2.0",
]
