[project]
name = "raspberry-mcp"
version = "0.1.0"
description = "Raspberry PI MCP with Agentic Client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11.3",
    "pigpio>=1.78",
    "rpi-gpio>=0.7.1; sys_platform == 'linux'",
    "adafruit-circuitpython-dht>=4.0.9; sys_platform == 'linux'",
    "gpiod>=2.0.0; sys_platform == 'linux'",
    "pydantic>=2.0.0",
    "atomic-agents>=2.2.0",
    "zeroconf>=0.148.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ruff>=0.14.6",
]
